--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -40,24 +40,29 @@ The combination of the VASP Code Type and the VASP Code globally, uniquely ident
 
 The Index Contract serves as a universal smart contract factory and is deployed only once by the OpenVASP Association. The owner of the contract merely has the ability to halt or terminate the contract in emergency situations or if required by protocol upgrades.  
 
-### State Variables
-
-```pseudocode
-address owner {internal}
-mapping (bytes8 => address) index {internal}
-```
-
 ### Functions
 
+#### createVASPContract
+
 ```pseudocode
-createVaspContract(address owner, bytes8 vaspCode, string transportKey, string messageKey, string signingKey) returns address {public}
+function createVASPContract
+(
+    bytes8 vaspCode,
+    address owner,
+    bytes4 channels,
+    string calldata transportKey,
+    string calldata messageKey,
+    string calldata signingKey
+)
+    external
+    returns (address)
 ```
 
 **Description:**  
-Deploys a VASP Contract, owned by `owner` and returns the address of the deployed contract. The Index Contract records the deployed contract's address under the specified `vaspCode` in its internal mapping. The *transportKey*, *messageKey* and *signingKey* respectively are set on deployment of the VASP contract. 
+Deploys a VASP Contract, owned by `owner` and returns the address of the deployed contract. The Index Contract records the deployed contract's address under the specified `vaspCode` in its internal mapping. The *channels*, *transportKey*, *messageKey* and *signingKey* respectively are set on deployment of the VASP contract. 
 
 **Conditions:**  
-`address` must be a valid Ethereum address; and  
+`owner` must be a valid Ethereum address; and  
 `vaspCode` must be unique in the internal mapping of the Index Contract, that is, `vaspCode` must have never been used in a successful call of this function before.
 
 **Use Case:**  
@@ -66,13 +71,22 @@ Called by a VASP to deploy a VASP Contract that represents the identity of the V
 **Event log:**
 
 ```pseudocode
-VaspContractIssued(bytes8 indexed vaspCode, address indexed vaspContractAddress, string transportKey, string messageKey, string signingKey)
+VASPContractCreated(bytes8 indexed vaspCode, address indexed vaspAddress)
+ChannelsChanged(bytes8 indexed vaspCode, bytes4 previousChannels, bytes4 newChannels);
+TransportKeyChanged(bytes8 indexed vaspCode, string previousTransportKey, string newTransportKey);
+MessageKeyChanged(bytes8 indexed vaspCode, string previousMessageKey, string newMessageKey);
+SigningKeyChanged(bytes8 indexed vaspCode, string previousSigningKey, string newSigningKey);
 ```
 
-All new deployed VASP Contracts must be logged as described above.
+#### getVASPAddressByCode
 
 ```pseudocode
-getVaspByCode(bytes8 vaspCode) returns address {public}
+function getVASPAddressByCode
+(
+    bytes8 vaspCode
+)
+    external view
+    returns (address)
 ```
 
 **Description:**  
@@ -81,28 +95,63 @@ Returns the address of the VASP Contract which has been recorded under the speci
 **Use Case:**  
 Called to get the VASP Contract which is uniquely assigned to a specific VASP Code. Intended method to retrieve a VASP Contract.
 
+#### getVASPCodeByAddress
+
 ```pseudocode
-getVaspCode(address vaspContract) returns bytes8 {public}
+function getVASPCodeByAddress
+(
+    address vaspAddress
+)
+    external view
+    returns (bytes8)
 ```
 
 **Description:**  
-Returns the VASP Code that was assigned to the specified `vaspContract` by the Index Contract. If no entry is found in the internal mapping, an empty address (0x) is returned by the function.
+Returns the VASP Code that was assigned to the specified `vaspAddress` by the Index Contract. If no entry is found in the internal mapping, an empty address (0x) is returned by the function.
 
 **Use Case:**  
 Called to get the VASP Code which is uniquely mapped to a given VASP Contract address.
 
+#### pause
+
 ```pseudocode
-halt() {owner}
+function pause()
+    external
 ```
 
 **Description:**  
-Disables *createVaspContract* functionality for all callers and arguments. 
+Disables *createVASPContract* functionality for all callers and arguments. 
+
+**Access**
+Can be called only by the *owner*
 
 **Use Case:**  
-End the lifecycle of the contract while preserving the current mapping and allowing queries towards existing entries.
+Pauses the lifecycle of the contract while preserving the current mapping and allowing queries towards existing entries.
+
+#### unpause
 
 ```pseudocode
-selfdestruct(recipient:address) {owner}
+function unpause()
+    external
+```
+
+**Description:**  
+Re-enables *createVASPContract* functionality for all callers and arguments. 
+
+**Access**
+Can be called only by the *owner*
+
+**Use Case:**  
+Resumes the lifecycle of the contract.
+
+#### terminate
+
+```pseudocode
+function terminate
+(
+    address payable recipient
+)
+    external
 ```
 
 **Description:**  
@@ -111,33 +160,93 @@ Frees memory allocated by the contract and transfers all potentially accidentall
 **Use Case:**  
 End the lifecycle of the VASP Index without preserving the existing mapping. Invalidates and obsoletes existing entries.
 
+#### transferOwnerRole
+
 ```pseudocode
-transferOwnership(address newOwner) returns bool {public}
+function transferOwnerRole
+(
+    address newOwnerCandidate
+)
+    external
 ```
 
 **Description:**  
-Sets the contract's state variable `candidateOwner` to the specified `newOwner`.
+Sets the specified address as a contract's owner candidate.
 
-**Conditions:**  
-None
+**Access**
+Can be called only by the *owner*
 
 **Use Case:**  
 Called by the contract owner to prepare the transfer of the contract's ownership to a new owner.
 
+**Event log:**
+
 ```pseudocode
-acceptOwnership() returns bool {public}
+OwnerRoleTransferStarted(address indexed currentOwner, address indexed newOwnerCandidate);
+```
+
+#### cancelOwnerRoleTransfer
+
+```pseudocode
+function cancelOwnerRoleTransfer()
+    external
 ```
 
 **Description:**  
-Sets the contract's state variable `owner` to `candidateOwner` and returns `true`.  
-Returns `false` if condition is not met.
+Cancels ownership transfer.
 
-**Conditions:**  
-Function is called by the address that is stored in state variable `candidateOwner`.
+**Access**
+Can be called only by the *owner*
+
+**Use Case:**  
+Called by the contract owner to cancel the transfer of the contract's ownership to a new owner.
+
+**Event log:**
+
+```pseudocode
+OwnerRoleTransferCancelled();
+```
+
+#### acceptOwnerRole
+
+```pseudocode
+function acceptOwnerRole()
+    external
+```
+
+**Description:**  
+Changes the *owner* of the contract.
+
+**Access**
+Can be called only by the *new owner candidate*
 
 **Use Case:**  
 Called by the future owner in order to accept transfer of the contract's ownership.
 
+**Event log:**
+
+```pseudocode
+OwnerRoleTransferCompleted(address indexed previousOwner, address indexed newOwner);
+```
+
+#### renounceOwnerRole
+
+```pseudocode
+function renounceOwnerRole() 
+    external
+```
+
+**Description:**  
+Renounces the owner role
+
+**Access**
+Can be called only by the *owner*
+
+**Use Case:**  
+Called by the future owner in order to accept transfer of the contract's ownership.
+
+**Use Case:**
+Can be called to leave the contract without owner. It will not be possible to call functions callable only by the owner anymore.
 
 ## VASP Contract
 
@@ -149,72 +258,70 @@ VASP Contracts can only be deployed together with a unique VASP Code and via the
 
 The owner of the VASP Contract can change the public keys and can transfer ownership.
 
-### State Variables
-
-```pseudocode
-address owner {internal}
-address candidateOwner {internal}
-bytes4 channels {public}
-string transportKey {public}
-string messageKey {public}
-string signingKey {public}
-```
-
-**Description:**
-The *signingkey* and the *handshakeKey* must be stored in [compressed](https://learnmeabitcoin.com/guide/public-key) form. That is it must be represented with exactly 33 bytes (66 characters) and is prefixed with '02' or '03'.
+**NB!**
+The *signingKey*, *messageKey* and the *transportKey* must be stored in [compressed](https://learnmeabitcoin.com/guide/public-key) form. That is it must be represented with exactly 33 bytes (66 characters) and is prefixed with '02' or '03'.
 
 ### Functions
 
+#### channels
+
 ```pseudocode
-transferOwnership(address newOwner) returns bool {public}
+function channels()
+    external view
+    returns (bytes4)
 ```
 
 **Description:**  
-Sets the contract's state variable `candidateOwner` to the specified `newOwner`.
+Returns the value of the channels.
 
-**Conditions:**  
-None
-
-**Use Case:**  
-Called by the contract owner to prepare the transfer of the contract's ownership to a new owner.
-
-
+#### signingKey
 
 ```pseudocode
-acceptOwnership() returns bool {public}
+function signingKey()
+    external view
+    returns (string)
 ```
 
 **Description:**  
-Sets the contract's state variable `owner` to `candidateOwner` and returns `true`.  
-Returns `false` if condition is not met.
+Returns the value of the signing key.
 
-**Conditions:**  
-Function is called by the address that is stored in state variable `candidateOwner`.
-
-**Use Case:**  
-Called by the future owner in order to accept transfer of the contract's ownership.
-
+#### messageKey
 
 ```pseudocode
-getOwner() returns address {public}
+function messageKey()
+    external view
+    returns (string)
 ```
 
 **Description:**  
-Returns the value of the *owner* field.
+Returns the value of the message key.
 
-**Use Case:**  
-Potentially called by a future VASP Index to allow migration of exisiting VASP Codes.
-
+#### transportKey
 
 ```pseudocode
-setChannels(bytes4 newChannels)
+function transportKey()
+    external view
+    returns (string)
 ```
 
 **Description:**  
-Sets the contract's state variable `channels` to `newChannels`.
+Returns the value of the transport key.
 
-**Conditions:**  
-Function is called by the address that is stored in state variable `owner`.
+#### setChannels
+
+```pseudocode
+setChannels
+(
+    bytes4 newChannels
+)
+    external
+```
+
+**Description:**  
+Sets the contract's channels.
+
+**Access:**  
+Can be called only by the *owner*.
 
 **Use Case:**  
 Owner changes the communication channels the VASP is accepting for OpenVASP messages. `channels` is to be interpreted as a bit mask, where each bit indicates a specific channel. At this time, the following channels are available:
@@ -223,17 +330,30 @@ Owner changes the communication channels the VASP is accepting for OpenVASP mess
 | ---- | ----------------------------------------------- |
 | 1    | Ethereum Whisper as specified per [ovip-0010]() |
 
-
+**Event log:**
 
 ```pseudocode
-setTransportKey(string newKey)
+ChannelsChanged(bytes8 indexed vaspCode, bytes4 previousChannels, bytes4 newChannels);
+TransportKeyChanged(bytes8 indexed vaspCode, string previousTransportKey, string newTransportKey);
+MessageKeyChanged(bytes8 indexed vaspCode, string previousMessageKey, string newMessageKey);
+SigningKeyChanged(bytes8 indexed vaspCode, string previousSigningKey, string newSigningKey);
+```
+
+#### setTransportKey
+
+```pseudocode
+function setTransportKey
+(
+    string calldata newTransportKey
+)
+    external
 ```
 
 **Description:**  
-Sets the contract's state variable `transportKey` to `newKey`.
+Changes the contract's transport key.
 
-**Conditions:**  
-Function is called by the address that is stored in state variable `owner`.
+**Access:**  
+Can be called only by the *owner*.
 
 **Use Case:**  
 Owner changes the public key required to secure communication on the transport layer (e.g. encryption of Whisper envelopes).
@@ -241,20 +361,24 @@ Owner changes the public key required to secure communication on the transport l
 **Event log:**
 
 ```pseudocode
-TransportKeyChanged(string oldKey, string newKey)
+TransportKeyChanged(bytes8 indexed vaspCode, string previousTransportKey, string newTransportKey);
 ```
 
-Key changes must be logged, including the previous and the new key. Note that the log is implicitely indexed by the log signature and by the emitting VASP Contract address.
+#### setMessageKey
 
 ```pseudocode
-setMessageKey(newKey: string)
+function setMessageKey
+(
+    string calldata newMessageKey
+)
+    external
 ```
 
 **Description:**  
-Sets the contract's state variable `messageKey` to `newKey`.
+Changes the contract's message key.
 
-**Conditions:**  
-Function is called by the address that is stored in state variable `owner`.
+**Access:**  
+Can be called only by the *owner*.
 
 **Use Case:**  
 Owner changes the public key required to encrypt OpenVASP messages (session layer).
@@ -262,20 +386,24 @@ Owner changes the public key required to encrypt OpenVASP messages (session laye
 **Event log:**
 
 ```pseudocode
-MessageKeyChanged(string oldKey, string newKey)
+MessageKeyChanged(bytes8 indexed vaspCode, string previousMessageKey, string newMessageKey);
 ```
 
-Key changes must be logged, including the previous and the new key. Note that the log is implicitely indexed by the log signature and by the emitting VASP Contract address.
+#### setSigningKey
 
 ```pseudocode
-setSigningKey(string newKey)
+function setSigningKey
+(
+    string calldata newSigningKey
+)
+    external
 ```
 
 **Description:**  
-Sets the contract's state variable `signingKey` to `newKey`.
+Changes the contract's signing key.
 
-**Conditions:**  
-Function is called by the address that is stored in state variable `owner`.
+**Access:**  
+Can be called only by the *owner*.
 
 **Use Case:**  
 Owner changes the public key required to verify message signatures.
@@ -283,10 +411,96 @@ Owner changes the public key required to verify message signatures.
 **Event log:**
 
 ```pseudocode
-MessageKeyChanged(string oldKey, string newKey)
+SigningChanged(bytes8 indexed vaspCode, string previousMessageKey, string newMessageKey);
 ```
 
-Key changes must be logged, including the previous and the new key. Note that the log is implicitely indexed by the log signature and by the emitting VASP Contract address.
+#### transferOwnerRole
+
+```pseudocode
+function transferOwnerRole
+(
+    address newOwnerCandidate
+)
+    external
+```
+
+**Description:**  
+Sets the specified address as a contract's owner candidate.
+
+**Access**
+Can be called only by the *owner*
+
+**Use Case:**  
+Called by the contract owner to prepare the transfer of the contract's ownership to a new owner.
+
+**Event log:**
+
+```pseudocode
+OwnerRoleTransferStarted(address indexed currentOwner, address indexed newOwnerCandidate);
+```
+
+#### cancelOwnerRoleTransfer
+
+```pseudocode
+function cancelOwnerRoleTransfer()
+    external
+```
+
+**Description:**  
+Cancels ownership transfer.
+
+**Access**
+Can be called only by the *owner*
+
+**Use Case:**  
+Called by the contract owner to cancel the transfer of the contract's ownership to a new owner.
+
+**Event log:**
+
+```pseudocode
+OwnerRoleTransferCancelled();
+```
+
+#### acceptOwnerRole
+
+```pseudocode
+function acceptOwnerRole()
+    external
+```
+
+**Description:**  
+Changes the *owner* of the contract.
+
+**Access**
+Can be called only by the *new owner candidate*
+
+**Use Case:**  
+Called by the future owner in order to accept transfer of the contract's ownership.
+
+**Event log:**
+
+```pseudocode
+OwnerRoleTransferCompleted(address indexed previousOwner, address indexed newOwner);
+```
+
+#### renounceOwnerRole
+
+```pseudocode
+function renounceOwnerRole() 
+    external
+```
+
+**Description:**  
+Renounces the owner role
+
+**Access**
+Can be called only by the *owner*
+
+**Use Case:**  
+Called by the future owner in order to accept transfer of the contract's ownership.
+
+**Use Case:**
+Can be called to leave the contract without owner. It will not be possible to call functions callable only by the owner anymore.
 
 # Migration Blueprint
 
