--- a/ovip-0012.md
+++ b/ovip-0012.md
@@ -27,19 +27,6 @@ Responsible for managing the content of the VASP Directory.
 **Owner**
 Responsible for managing the lifecycle of the VASP Directory
 
-# Data Structures
-
-**The Dictionary**
-Uniquely maps a bytes12 (VASP Identifier) to a tuple: (string, byte32) <=> (Credentials reference, Credentials hash).
-
-**State Variables**
-
-```pseudocode
-owner: address {internal}
-candidateOwner: address {internal}
-administrator: address {internal}
-```
-
 # Methods
 
 ## Fetching Credentials
@@ -47,7 +34,12 @@ administrator: address {internal}
 **Signature:**
 
 ```pseudocode
-**getCredentialRef(bytes12 vaspID) returns (string, bytes32) {public}**
+function getCredentialsRef
+(
+    bytes12 vaspId
+)
+    external virtual view
+    returns (string memory credentialsRef, bytes32 credentialsHash);
 ```
 
 **Description:**
@@ -61,7 +53,12 @@ Given a VASP Identifier (*vaspID*) it returns a tuple of two strings. The first 
 **Signature:**
 
 ```pseudocode
-insertCredentials(bytes12 vaspID,string credentials) {Administrator}
+function insertCredentials
+(
+    bytes12 vaspId,
+    string calldata credentials
+)
+    external
 ```
 
 **Description:**
@@ -74,16 +71,19 @@ The Keccak256 hash of the credentials is calculated as part of this method and i
 **Event log:**
 
 ```pseudocode
-CredentialsInserted(bytes12 indexed vaspID, bytes32 indexed credentialsHash, string credentials)
+CredentialsInserted(bytes12 indexed vaspId, uint256 indexed credentialRef, bytes32 indexed credentialsHash, string credentials);
 ```
-On any successful insertion of Credentials the *CredentialsInserted* event must be emitted. It presents the storage of the credentials, and thus represents an integral part of the solution.
 
 ## Revocation of Credentials
 
 **Signature:**
 
 ```pseudocode
-revokeCredentials(bytes12 vaspID) {Administrator}
+function revokeCredentials
+(
+    bytes12 vaspId
+)
+    external
 ```
 
 **Description:**
@@ -95,70 +95,167 @@ If there is no existing entry for the VASP Identifier, the method should fail. I
 **Event log:**
 
 ```pseudocode
-CredentialsRevoked(bytes12 indexed vaspID, bytes32 indexed credentialsHash)
+CredentialsRevoked(bytes12 indexed vaspId, uint256 indexed credentialRef, bytes32 indexed credentialsHash)
 ```
-On any successful revocation of Credentials the *CredentialsRevoked* event must be emitted. It logs the history of revocations. The *credentialsHash* is an integral component of the log as it serves as a identifying reference to the revoked credentials, which will also be found as part of the logs.
 
-## Change Administrator
+## Add Administrator Role
 
 ```pseudocode
-transferAdministrator(address newAdministrator) returns bool {owner}
+function grantAdministratorRole
+(
+    address account
+)
+    external
 ```
 
 **Description:**  
-Sets the contract's state variable `administrator` to the specified `newAdministrator`.
+Grants administrator role to the specified account
 
-**Conditions:**  
-None
+**Access:**  
+Can be called only by *owner*
 
 **Use Case:**  
-Called by the contract owner to change the contract's administrator.
+Called by the owner to grant administrator role to the specified account
 
-## Transfer Ownership
+## Revoke Administrator Role
 
 ```pseudocode
-transferOwnership(address newOwner) returns bool {owner}
+function revokeAdministratorRole
+(
+    address account
+)
+    external
 ```
 
 **Description:**  
-Sets the contract's state variable `candidateOwner` to the specified `newOwner`.
+Revokes administrator role from the specified account
 
-**Conditions:**  
-None
+**Access:**  
+Can be called only by *owner*
+
+**Use Case:**  
+Called by the owner to revoke administrator role from the specified account
+
+## Renounce Administrator Role
+
+```pseudocode
+function renounceAdministratorRole()
+    external
+```
+
+**Description:**  
+Renounces administrator role for the caller
+
+**Access:**  
+Can be called only by *administrator*
+
+**Use Case:**  
+Called by the administrator to renounce his own permissions.
+
+## Transfer Owner Role
+
+```pseudocode
+function transferOwnerRole
+(
+    address newOwnerCandidate
+)
+    external
+```
+
+**Description:**  
+Sets the specified address as a contract's owner candidate.
+
+**Access**
+Can be called only by the *owner*
 
 **Use Case:**  
 Called by the contract owner to prepare the transfer of the contract's ownership to a new owner.
 
-## Accept Ownership
+**Event log:**
 
 ```pseudocode
-acceptOwnership() returns bool {candidateOwner}
+OwnerRoleTransferStarted(address indexed currentOwner, address indexed newOwnerCandidate);
+```
+
+## Cancel Owner Role Transfer
+
+```pseudocode
+function cancelOwnerRoleTransfer()
+    external
 ```
 
 **Description:**  
-Sets the contract's state variable `owner` to `candidateOwner` and returns `true`.  
-Returns `false` if condition is not met.
+Cancels ownership transfer.
 
-**Conditions:**  
-Function is called by the address that is stored in state variable `candidateOwner`.
+**Access**
+Can be called only by the *owner*
+
+**Use Case:**  
+Called by the contract owner to cancel the transfer of the contract's ownership to a new owner.
+
+**Event log:**
+
+```pseudocode
+OwnerRoleTransferCancelled();
+```
+
+## Accept Owner Role
+
+```pseudocode
+function acceptOwnerRole()
+    external
+```
+
+**Description:**  
+Changes the *owner* of the contract.
+
+**Access**
+Can be called only by the *new owner candidate*
 
 **Use Case:**  
 Called by the future owner in order to accept transfer of the contract's ownership.
 
-## Terminate Contract
+**Event log:**
 
 ```pseudocode
-terminateContract() returns bool {owner}
+OwnerRoleTransferCompleted(address indexed previousOwner, address indexed newOwner);
+```
+
+## Renounce Owner Role
+
+```pseudocode
+function renounceOwnerRole() 
+    external
 ```
 
 **Description:**  
-Ends the lifecycle of the VASP Directory.
+Renounces the owner role
 
-**Behavior:**  
-Function clears (removes) all content of the dictionary. Subsequently the owner and the administrator are set to 0x0.
+**Access**
+Can be called only by the *owner*
 
 **Use Case:**  
-Called by the owner if the contract is no longer maintained. It ensures the there will be no misuse of the contract's data going forward. 
+Called by the future owner in order to accept transfer of the contract's ownership.
+
+**Use Case:**
+Can be called to leave the contract without owner. It will not be possible to call functions callable only by the owner anymore.
+
+
+## Termination of a Contract
+
+```pseudocode
+function terminate
+(
+    address payable recipient
+)
+    external
+```
+
+**Description:**  
+Frees memory allocated by the contract and transfers all potentially accidentally funds send to the contract to *recipient*. 
+
+**Use Case:**  
+End the lifecycle of the VASP Index without preserving the existing mapping. Invalidates and obsoletes existing entries.
 
 # Backwards Compatibility
 
