Events signature changed

--- a/ovip-0012.md
+++ b/ovip-0012.md
@@ -71,7 +71,7 @@ The Keccak256 hash of the credentials is calculated as part of this method and i
 **Event log:**
 
 ```pseudocode
-CredentialsInserted(bytes12 indexed vaspId, uint256 indexed credentialRef, bytes32 indexed credentialsHash, string credentials);
+CredentialsInserted(bytes12 indexed vaspId, bytes32 indexed credentialRef, bytes32 indexed credentialsHash, string credentials);
 ```
 
 ## Revocation of Credentials
@@ -95,7 +95,7 @@ If there is no existing entry for the VASP Identifier, the method should fail. I
 **Event log:**
 
 ```pseudocode
-CredentialsRevoked(bytes12 indexed vaspId, uint256 indexed credentialRef, bytes32 indexed credentialsHash)
+CredentialsRevoked(bytes12 indexed vaspId, bytes32 indexed credentialRef, bytes32 indexed credentialsHash)
 ```
 
 ## Add Administrator Role
