Ovip-0006: superseded by ovip-0014

--- a/ovip-0006.md
+++ b/ovip-0006.md
@@ -6,6 +6,7 @@ Discussions-To: https://community.openvasp.org/#narrow/stream/11-protocol-.2F.20
 Status: Proposal
 Type: Standard
 Created: 2020-14-05
+Superseded-By: ovip-0014
 ```
 
 ## Abstract
