--- a/ovip-0006.md
+++ b/ovip-0006.md
@@ -3,7 +3,7 @@ OVIP: 6
 Title: Protocol messages cleanup
 Author: Nika Gamkrelidze <nikoloz.gamkrelidze@lykke-business.ch>
 Discussions-To: https://community.openvasp.org/#narrow/stream/11-protocol-.2F.20messages/topic/data.20duplicates
-Status: Proposal
+Status: Superseded
 Type: Standard
 Created: 2020-14-05
 Superseded-By: ovip-0014
