Format changes to channel byte mask

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -326,9 +326,9 @@ Can be called only by the *owner*.
 **Use Case:**  
 Owner changes the communication channels the VASP is accepting for OpenVASP messages. `channels` is to be interpreted as a bit mask, where each bit indicates a specific channel. At this time, the following channels are available:
 
-| Bit  | Channel                                         |
+| Byte Mask  | Channel                                         |
 | ---- | ----------------------------------------------- |
-| 1    | Ethereum Whisper as specified per [ovip-0010]() |
+| 00000000 000000000 00000000 00000001    | Ethereum Whisper as specified per [ovip-0010]() |
 
 **Event log:**
 
