Byte Mask => Bit Mask

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -326,7 +326,7 @@ Can be called only by the *owner*.
 **Use Case:**  
 Owner changes the communication channels the VASP is accepting for OpenVASP messages. `channels` is to be interpreted as a bit mask, where each bit indicates a specific channel. At this time, the following channels are available:
 
-| Byte Mask  | Channel                                         |
+| Bit Mask  | Channel                                         |
 | ---- | ----------------------------------------------- |
 | 00000000 000000000 00000000 00000001    | Ethereum Whisper as specified per [ovip-0010]() |
 
