Ephemeral ecdhPK must be compressed and thus 33 bytes

--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -100,7 +100,7 @@ The table below shows the structure of the OpenVASP *Payload*. The last four ele
 | `envelopeID`  | 16 bytes       | Always  | Randomly set *Envelope* identifier                |       |
 | `envelopeACK` | 16 bytes       |         | Reference to an *Envelope* identifier             |       |
 | `returnTopic` | 4 bytes        |         | Return topic                                      |       |
-| `ecdhPK`      | 32 bytes       |         | ECDH public key                                   |       |
+| `ecdhPK`      | 33 bytes       |         | Ephemeral compressed ECDH public key              |       |
 | `ovMessage`   | arbitrary size |         | Session Message (JSON)                            |       |
 
 #### 4.1.1. Instructions
