Change pk datatype from string to bytes

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -50,9 +50,9 @@ function createVASPContract
     bytes4 vaspCode,
     address owner,
     bytes4 channels,
-    string calldata transportKey,
-    string calldata messageKey,
-    string calldata signingKey
+    bytes calldata transportKey,
+    bytes calldata messageKey,
+    bytes calldata signingKey
 )
     external
     returns (address)
@@ -73,9 +73,9 @@ Called by a VASP to deploy a VASP Contract that represents the identity of the V
 ```pseudocode
 VASPContractCreated(bytes4 indexed vaspCode, address indexed vaspAddress)
 ChannelsChanged(bytes4 indexed vaspCode, bytes4 previousChannels, bytes4 newChannels);
-TransportKeyChanged(bytes4 indexed vaspCode, string previousTransportKey, string newTransportKey);
-MessageKeyChanged(bytes4 indexed vaspCode, string previousMessageKey, string newMessageKey);
-SigningKeyChanged(bytes4 indexed vaspCode, string previousSigningKey, string newSigningKey);
+TransportKeyChanged(bytes4 indexed vaspCode, bytes previousTransportKey, bytes newTransportKey);
+MessageKeyChanged(bytes4 indexed vaspCode, bytes previousMessageKey, bytes newMessageKey);
+SigningKeyChanged(bytes4 indexed vaspCode, bytes previousSigningKey, bytes newSigningKey);
 ```
 
 #### getVASPAddressByCode
@@ -259,7 +259,7 @@ VASP Contracts can only be deployed together with a unique VASP Code and via the
 The owner of the VASP Contract can change the public keys and can transfer ownership.
 
 **NB!**
-The *signingKey*, *messageKey* and the *transportKey* must be stored in [compressed](https://learnmeabitcoin.com/guide/public-key) form. That is it must be represented with exactly 33 bytes (66 characters) and is prefixed with '02' or '03'.
+The *signingKey*, *messageKey* and the *transportKey* must be stored in [compressed](https://learnmeabitcoin.com/guide/public-key) form. That is it must be represented with exactly 33 bytes and is prefixed with '02' or '03'.
 
 ### Functions
 
@@ -279,7 +279,7 @@ Returns the value of the channels.
 ```pseudocode
 function signingKey()
     external view
-    returns (string)
+    returns (bytes)
 ```
 
 **Description:**  
@@ -290,7 +290,7 @@ Returns the value of the signing key.
 ```pseudocode
 function messageKey()
     external view
-    returns (string)
+    returns (bytes)
 ```
 
 **Description:**  
@@ -301,7 +301,7 @@ Returns the value of the message key.
 ```pseudocode
 function transportKey()
     external view
-    returns (string)
+    returns (bytes)
 ```
 
 **Description:**  
@@ -344,7 +344,7 @@ SigningKeyChanged(bytes8 indexed vaspCode, string previousSigningKey, string new
 ```pseudocode
 function setTransportKey
 (
-    string calldata newTransportKey
+    bytes calldata newTransportKey
 )
     external
 ```
@@ -361,7 +361,7 @@ Owner changes the public key required to secure communication on the transport l
 **Event log:**
 
 ```pseudocode
-TransportKeyChanged(bytes4 indexed vaspCode, string previousTransportKey, string newTransportKey);
+TransportKeyChanged(bytes4 indexed vaspCode, bytes previousTransportKey, bytes newTransportKey);
 ```
 
 #### setMessageKey
@@ -369,7 +369,7 @@ TransportKeyChanged(bytes4 indexed vaspCode, string previousTransportKey, string
 ```pseudocode
 function setMessageKey
 (
-    string calldata newMessageKey
+    bytes calldata newMessageKey
 )
     external
 ```
@@ -386,7 +386,7 @@ Owner changes the public key required to encrypt OpenVASP messages (session laye
 **Event log:**
 
 ```pseudocode
-MessageKeyChanged(bytes4 indexed vaspCode, string previousMessageKey, string newMessageKey);
+MessageKeyChanged(bytes4 indexed vaspCode, bytes previousMessageKey, bytes newMessageKey);
 ```
 
 #### setSigningKey
@@ -394,7 +394,7 @@ MessageKeyChanged(bytes4 indexed vaspCode, string previousMessageKey, string new
 ```pseudocode
 function setSigningKey
 (
-    string calldata newSigningKey
+    bytes calldata newSigningKey
 )
     external
 ```
