Add requirement of pk format enforcement

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -22,6 +22,10 @@ This OVIP specifies the interface of the VASP Contract and the Index Contract, w
 
 # Specification
 
+## Public Key Format
+
+The *signingKey*, *messageKey* and the *transportKey* must be stored in [compressed](https://learnmeabitcoin.com/guide/public-key) form. That is it must be represented with exactly 33 bytes and is prefixed with '02' or '03'. This format must be enforced by the smart contract, any call changing the key to a byte array in invalid format must fail.
+
 ## VASP Code
 
 The VASP Code consists of 8 hexadecimal characters and is a unique identifier for the VASP Contract representing the VASP's identity.
@@ -64,6 +68,7 @@ Deploys a VASP Contract, owned by `owner` and returns the address of the deploye
 **Conditions:**  
 `owner` must be a valid Ethereum address; and  
 `vaspCode` must be unique in the internal mapping of the Index Contract, that is, `vaspCode` must have never been used in a successful call of this function before.
+*Public Key Format* must be enforced for transportKey, messageKey and signingKey.
 
 **Use Case:**  
 Called by a VASP to deploy a VASP Contract that represents the identity of the VASP within the OpenVASP protocol and that is mapped to a unique VASP Code chosen by the VASP.
@@ -258,9 +263,6 @@ VASP Contracts can only be deployed together with a unique VASP Code and via the
 
 The owner of the VASP Contract can change the public keys and can transfer ownership.
 
-**NB!**
-The *signingKey*, *messageKey* and the *transportKey* must be stored in [compressed](https://learnmeabitcoin.com/guide/public-key) form. That is it must be represented with exactly 33 bytes and is prefixed with '02' or '03'.
-
 ### Functions
 
 #### channels
@@ -350,7 +352,7 @@ function setTransportKey
 ```
 
 **Description:**  
-Changes the contract's transport key.
+Changes the contract's transport key. *Public Key Format* must be enforced for newTransportKey.
 
 **Access:**  
 Can be called only by the *owner*.
@@ -375,7 +377,7 @@ function setMessageKey
 ```
 
 **Description:**  
-Changes the contract's message key.
+Changes the contract's message key. *Public Key Format* must be enforced for newMessageKey.
 
 **Access:**  
 Can be called only by the *owner*.
@@ -400,7 +402,7 @@ function setSigningKey
 ```
 
 **Description:**  
-Changes the contract's signing key.
+Changes the contract's signing key. *Public Key Format* must be enforced for newSigningKey.
 
 **Access:**  
 Can be called only by the *owner*.
