--- a/ovip-0013.md
+++ b/ovip-0013.md
@@ -21,42 +21,42 @@ This OVIP defines core data types for the OpenVASP protocol containing a hierarc
 | Level 1                 | Name      | Type       | Mult. | Rules | IVMS101 Ref.             |
 | :---------------------- | :-------- | :--------- | :---- | :---- | :----------------------- |
 | VASP Identifier         | `vaspid`  | String(12) | 1..1  | 1     |                          |
-| Natural person          | `natural` | see 2.1    | 0..1  | 2     | *naturalPerson*          |
-| Legal person            | `legal`   | see 2.2    | 0..1  | 2, 3  | *legalPerson*            |
-| Address                 | `address` | see 2.3    | 1..1  |       | *geographicAddress*      |
-| National identification | `id`      | see 2.4    | 1..*  | 3     | *nationalIdentification* |
+| Natural person          | `natural` | see [2.1](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#21-natural-person)    | 0..1  | 2     | *naturalPerson*          |
+| Legal person            | `legal`   | see [2.2](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#22-legal-person)    | 0..1  | 2, 3  | *legalPerson*            |
+| Address                 | `address` | see [2.3](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#23-address)    | 1..1  |       | *geographicAddress*      |
+| National identification | `id`      | see [2.4](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#24-national-identification-type)    | 1..*  | 3     | *nationalIdentification* |
 
 **Rules:**
 
-1. `vaspid` must be a VASP Identifier as specified in [ovip-0002]().
+1. `vaspid` must be a VASP Identifier as specified in [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md).
 2. Either `natural` or `legal` must be present, but not both.
-3. If `legal` is present, `id` must contain at least one sub element where `id_type` (see 2.4) has one of the following values: `RAID`, `LEIX`, `TXID` or `MISC`.
+3. If `legal` is present, `id` must contain at least one sub element where `id_type` (see [2.4](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#24-national-identification-type)) has one of the following values: `RAID`, `LEIX`, `TXID` or `MISC`.
 
 ### 1.2. Originator
 
 | Level 1                 | Name      | Type    | Mult. | Rules | IVMS101 Ref.             |
 | :---------------------- | :-------- | :------ | :---- | :---- | :----------------------- |
-| Natural person          | `natural` | see 2.1 | 0..1  | 1, 2  | *naturalPerson*          |
-| Legal person            | `legal`   | see 2.2 | 0..1  | 1, 3  | *legalPerson*            |
-| Address                 | `address` | see 2.3 | 0..1  | 2     | *geographicAddress*      |
-| National identification | `id`      | see 2.4 | 0..*  | 2, 3  | *nationalIdentification* |
-| Customer identification | `cid`     | see 2.5 | 0..*  | 2     |                          |
+| Natural person          | `natural` | see [2.1](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#21-natural-person) | 0..1  | 1, 2  | *naturalPerson*          |
+| Legal person            | `legal`   | see [2.2](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#22-legal-person) | 0..1  | 1, 3  | *legalPerson*            |
+| Address                 | `address` | see [2.3](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#23-address) | 0..1  | 2     | *geographicAddress*      |
+| National identification | `id`      | see [2.4](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#24-national-identification-type) | 0..*  | 2, 3  | *nationalIdentification* |
+| Customer identification | `cid`     | see [2.5](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#25-customer-identification-type) | 0..*  | 2     |                          |
 
 **Rules:**
 
 1. Either `natural` or `legal` must be present, but not both.
-2. Either `address` or `id` or `cid` or `birth` (sub element of `natural`, see 2.1) must be present. More than one can be present.
-3. If `legal` and `id` are both present, `id` must contain at least one sub element where `id_type` (see 2.4) has one of the following values: `RAID`, `LEIX`, `TXID` or `MISC`.
+2. Either `address` or `id` or `cid` or `birth` (sub element of `natural`, see [2.1](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#21-natural-person)) must be present. More than one can be present.
+3. If `legal` and `id` are both present, `id` must contain at least one sub element where `id_type` (see [2.4](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#24-national-identification-type)) has one of the following values: `RAID`, `LEIX`, `TXID` or `MISC`.
 
 ### 1.3. Beneficiary
 
 | Level 1                 | Name      | Type    | Mult. | Rules | IVMS101 Ref.             |
 | :---------------------- | :-------- | :------ | :---- | :---- | :----------------------- |
-| Natural person          | `natural` | see 2.1 | 0..1  | 1     | *naturalPerson*          |
-| Legal person            | `legal`   | see 2.2 | 0..1  | 1     | *legalPerson*            |
-| Address                 | `adress`  | see 2.3 | 0..1  |       | *geographicAddress*      |
-| National identification | `id`      | see 2.4 | 0..*  |       | *nationalIdentification* |
-| Customer identification | `cid`     | see 2.5 | 0..*  |       |                          |
+| Natural person          | `natural` | see [2.1](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#21-natural-person) | 0..1  | 1     | *naturalPerson*          |
+| Legal person            | `legal`   | see [2.2](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#22-legal-person) | 0..1  | 1     | *legalPerson*            |
+| Address                 | `adress`  | see [2.3](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#23-address) | 0..1  |       | *geographicAddress*      |
+| National identification | `id`      | see [2.4](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#24-national-identification-type) | 0..*  |       | *nationalIdentification* |
+| Customer identification | `cid`     | see [2.5](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#25-customer-identification-type) | 0..*  |       |                          |
 
 **Rules:**
 
@@ -85,7 +85,7 @@ This OVIP defines core data types for the OpenVASP protocol containing a hierarc
 | :----------------------- | :--------------- | :---------- | :---- | :---- | :-------------------- |
 | Primary name             | `name_primary`   | String(100) | 1..1  |       | *primaryIdentifier*   |
 | Secondary name           | `name_secondary` | String(100) | 0..1  |       | *secondaryIdentifier* |
-| Natural person name type | `name_type`      | see 3.1     | 1..1  |       | *nameIdentifierType*  |
+| Natural person name type | `name_type`      | see [3.1](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#31-natural-person-name-type)     | 1..1  |       | *nameIdentifierType*  |
 
 #### 2.1.2 Daten and Place of Birth
 
@@ -117,13 +117,13 @@ This OVIP defines core data types for the OpenVASP protocol containing a hierarc
 | Level 3                | Name           | Type        | Mult. | Rules | IVMS101 Ref.                    |
 | :--------------------- | :------------- | :---------- | :---- | :---- | :------------------------------ |
 | Legal person name      | `leg_name`     | String(100) | 1..1  |       | *legalPersonName*               |
-| Legal person name type | `leg_nametype` | see 3.2     | 1..1  |       | *legalPersonNameIdentifierType* |
+| Legal person name type | `leg_nametype` | see [3.2](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#32-legal-person-name-type)     | 1..1  |       | *legalPersonNameIdentifierType* |
 
 ### 2.3. Address
 
 | Level 2             | Name          | Type       | Mult. | Rules | IVMS101 Ref.         |
 | :------------------ | :------------ | :--------- | :---- | :---- | :------------------- |
-| Address type        | `adr_type`    | see 3.3    | 1..1  |       | *addressType*        |
+| Address type        | `adr_type`    | see [3.3](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#33-address-type-values)    | 1..1  |       | *addressType*        |
 | Department          | `dep`         | String(50) | 0..1  |       | *department*         |
 | Sub department      | `dep_sub`     | String(70) | 0..1  |       | *subDepartment*      |
 | Street name         | `street`      | String(70) | 0..1  | 1     | *streetName*         |
@@ -150,15 +150,15 @@ This OVIP defines core data types for the OpenVASP protocol containing a hierarc
 | Level 2                  | Name      | Type       | Mult. | Rules   | IVMS101 Ref.             |
 | :----------------------- | :-------- | :--------- | :---- | :------ | :----------------------- |
 | National Identifier      | `id_id`   | String(35) | 1..1  |         | *nationalIdentifier*     |
-| National Identifier Type | `id_type` | see 3.4    | 1..1  | 2, 3    | *nationalIdentifierType* |
+| National Identifier Type | `id_type` | see [3.4](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#34-national-identifier-type-values)    | 1..1  | 2, 3    | *nationalIdentifierType* |
 | Country of issue         | `id_ctry` | String(2)  | 0..1  | 1, 4    | *countryOfIssue*         |
 | Registration Authority   | `id_reg`  | String(8)  | 0..1  | 2, 3, 5 | *registrationAuthority*  |
 
 **Rules:**
 
 1. If `legal` is present in the parent element on level 1, `id_ctry` must not be present.
-2. If `legal` is present in the parent element on level 1 and the value of `id_type` is not `LEIX` (see 3.4), `id_reg` must be present.
-3. If the value of `id_type` is `LEIX` (see 3.4), `id_reg` must not be present.
+2. If `legal` is present in the parent element on level 1 and the value of `id_type` is not `LEIX` (see [3.4](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#34-national-identifier-type-values)), `id_reg` must be present.
+3. If the value of `id_type` is `LEIX` (see [3.4](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#34-national-identifier-type-values)), `id_reg` must not be present.
 4. `id_ctry` must be formatted as per ISO 3166-1 alpha-2.
 5. `id_reg` must be a valid GLEIF Registration Authority Code (see: https://www.gleif.org/en/about-lei/code-lists/gleif-registration-authorities-list).
 
