--- a/ovip-0002.md
+++ b/ovip-0002.md
@@ -3,7 +3,7 @@ OVIP: 2
 Title: Virtual Assets Account Number (VAAN)
 Author: David Riegelnig <david.riegelnig@bitcoinsuisse.com>
 Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
-Status: Proposal
+Status: Accepted
 Type: Standard
 Created: 2020-05-04
 ```
