--- a/ovip-0007.md
+++ b/ovip-0007.md
@@ -3,7 +3,7 @@ OVIP: 7
 Title: Session Layer
 Author: David Riegelnig <david.riegelnig@bitcoinsuisse.com>
 Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
-Status: Proposal
+Status: Accepted
 Type: Standard
 Created: 2020-05-28
 ```
