--- a/ovip-0011.md
+++ b/ovip-0011.md
@@ -3,7 +3,7 @@ OVIP: 11
 Title: VASP Registries
 Author: David Riegelnig <david.riegelnig@bitcoinsuisse.com>
 Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
-Status: Proposal
+Status: Accepted
 Type: Standard
 Created: 2020-06-11
 ```
@@ -12,7 +12,7 @@ Created: 2020-06-11
 
 Virtual Assets Service Providers (VASPs) using the OpenVASP protocol establish their identity based on a self-assigned VASP Identifier whose uniqueness is ensured via the Index Contract.
 
-The holder of the VASP Identifier can prove his authenticity as well as ownership of the respective VASP Contract by signing with the private key (see [ovip-0003]()).
+The holder of the VASP Identifier can prove his authenticity as well as ownership of the respective VASP Contract by signing with the private key (see [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md)).
 
 Those sending an OpenVASP Message to the holder of a specific VASP Identifier can therefore be ensured that only this holder will be able to receive and decrypt the Message when using the public keys (for transport and session layer) available from the respective VASP Contract for encryption.
 
@@ -25,7 +25,7 @@ The **VASP Registry** specification in this document defines a smart contract in
 # Definitions
 
 **VASP Identifier**</br>
-Globally unique VASP identifier as specified in [ovip-0002]().
+Globally unique VASP identifier as specified in [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md).
 
 **VASP Registry**</br>
 Smart contract operated by a trusted third party providing access to claims about a VASP referenced by its *VASP Identifier*.
