--- a/ovip-0012.md
+++ b/ovip-0012.md
@@ -3,7 +3,7 @@ OVIP: 12
 Title: VASP Directory
 Author: Felix Laufenbegr <felix.laufenberg@bitcoinsuisse.com>
 Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
-Status: Proposal
+Status: Accepted
 Type: Standard
 Created: 2020-06-13
 ```
