--- a/ovip-0013.md
+++ b/ovip-0013.md
@@ -3,7 +3,7 @@ OVIP: 13
 Title: OpenVASP Core Data Types
 Author: David Riegelnig <david.riegelnig@bitcoinsuisse.com>
 Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
-Status: Proposal
+Status: Accepted
 Type: Standard
 Created: 2020-06-14
 ```
@@ -172,7 +172,7 @@ This OVIP defines core data types for the OpenVASP protocol containing a hierarc
 **Rules:**
 
 1. Either `vaan` or `cid_id` must be present, or both.
-2. `vaan` must be a VAAN as specified in [ovip-0002]().
+2. `vaan` must be a VAAN as specified in [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md).
 
 ## 3. Code Tables
 
