--- a/ovip-0014.md
+++ b/ovip-0014.md
@@ -3,7 +3,7 @@ OVIP: 14
 Title: Message Family: Transfer (TFR)
 Author: David Riegelnig <david.riegelnig@bitcoinsuisse.com>
 Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
-Status: Proposal
+Status: Accepted
 Type: Standard
 Created: 2020-06-14
 ```
@@ -12,9 +12,9 @@ Created: 2020-06-14
 
 The OpenVASP **Transfer (TFR)** message familiy provides a set of messages to facilitate a structured communication between the Originator VASP and the Beneficiary VASP transferring virtual assets on behalf of their customers. The messages are specified to ensure compliance with FATF Recommendation 16, often referred to as "Travel Rule".
 
-Message specification follows the principles for OpenVASP **Application Messages** defined in [ovip-007]() (section 5).
+Message specification follows the principles for OpenVASP **Application Messages** defined in [ovip-007](https://github.com/OpenVASP/ovips/blob/master/ovip-0007.md) (section 5).
 
-This specification is a refined version of the protocol flow proposed in the OpenVASP White Paper (page 15). Changes reflect the decoupling introduced with the layer model (see [ovip-0009]()) as well as the message streamlining suggested in [ovip-0006]().
+This specification is a refined version of the protocol flow proposed in the OpenVASP White Paper (page 15). Changes reflect the decoupling introduced with the layer model (see [ovip-0009]()) as well as the message streamlining suggested in [ovip-0006](https://github.com/OpenVASP/ovips/blob/master/ovip-0006.md).
 
 
 
