--- a/ovip-0015.md
+++ b/ovip-0015.md
@@ -3,7 +3,7 @@ OVIP: 15
 Title: OpenVASP Credential
 Author: David Riegelnig <david.riegelnig@bitcoinsuisse.com>
 Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
-Status: Proposal
+Status: Accepted
 Type: Standard
 Created: 2020-06-21
 ```
@@ -19,11 +19,11 @@ This OVIP specifies how *Credentials* are structured and how conformant implemen
 
 ## 1. Retrieving the Credential
 
-Conformant implementations must retrieve the *Credential* directly from the *Directory* smart contract via the `getCredentialRef()` function (see [ovip-0012]()) and must not rely on any other source.
+Conformant implementations must retrieve the *Credential* directly from the *Directory* smart contract via the `getCredentialRef()` function (see [ovip-0012](https://github.com/OpenVASP/ovips/blob/master/ovip-0012.md)) and must not rely on any other source.
 
 ## 2. Credential Integrity
 
-Conformant implementations must verify the *Credential's* content using its hash available from the *Directory* smart contract or the corresponding event logs (see [ovip-0012]()).
+Conformant implementations must verify the *Credential's* content using its hash available from the *Directory* smart contract or the corresponding event logs (see [ovip-0012](https://github.com/OpenVASP/ovips/blob/master/ovip-0012.md)).
 
 ## 3. Credential Validity
 
